working with new db schem a

--- a/client/templates/projectPage.html
+++ b/client/templates/projectPage.html
@@ -4,10 +4,10 @@
     <p>{{project.summary}}</p>
     <div class="work-area">
         <div class="map-space">
-            {{> nodeDisplay nodes=nodes}}
+            {{> nodeDisplay project=project.code}}
         </div>
         <div class="type-space">
-            {{> typeDisplay nodes=nodes}}
+            {{> typeDisplay project=project.code}}
         </div>
     </div>
   </div>
